--- a/service_catalog_backend/src/main/resources/application.properties
+++ b/service_catalog_backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8091
 
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:file:./data/service_catalog_1.mdb;;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;DB_CLOSE_DELAY=-1
@@ -10,10 +10,10 @@ server.port=8080
 #jasypt.encryptor.password=wissen
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Wissen@5823
+spring.datasource.username=admin
+spring.datasource.password=Wissen01
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.datasource.url=jdbc:mysql://localhost:3306/service-catalog_db
+spring.datasource.url=jdbc:mysql://database-1.cspm4m7zyuy9.us-east-1.rds.amazonaws.com/service_catalog_db
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
