--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,37 +1,42 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: webapp
-  labels:
-    app: webapp
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: webapp
-  template:
-    metadata:
-      labels:
-        app: webapp 
-    spec:
-      containers:
-      - name: webserver
-        image: devopswissen/nginx5:v1
-        ports:
-        - containerPort: 8090
-
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: webapp
+  name: nginx
+  labels:
+    app: nginx
 spec:
+  type: NodePort
   selector:
-    app: webapp 
-  type: LoadBalancer
+    app: nginx
   ports:
   - protocol: TCP
-    port: 3000
-    targetPort: 8090
-    nodePort: 31110
+    port: 8090
+    name: http
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx
+spec:
+  selector:
+    matchLabels:
+      app: nginx
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: devopswissen/nginx5:v1
+        ports:
+        - containerPort: 8090
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8090
+          initialDelaySeconds: 30
+          timeoutSeconds: 1
