--- a/service.yaml
+++ b/service.yaml
@@ -1,37 +1,42 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nodeapp
-  labels:
-    app: nodeapp
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nodeapp
-  template:
-    metadata:
-      labels:
-        app: nodeapp 
-    spec:
-      containers:
-      - name: nodeserver
-        image: devopswissen/service6:v1
-        ports:
-        - containerPort: 8091
-
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodeapp
+  name: service
+  labels:
+    app: service
 spec:
+  type: NodePort
   selector:
-    app: nodeapp 
-  type: LoadBalancer
+    app: service
   ports:
   - protocol: TCP
-    port: 5000
-    targetPort: 8091
-    nodePort: 31111
+    port: 8091
+    name: http
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: service
+spec:
+  selector:
+    matchLabels:
+      app: service
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: service
+    spec:
+      containers:
+      - name: service
+        image: devopswissen/service6:v1
+        ports:
+        - containerPort: 8090
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8090
+          initialDelaySeconds: 30
+          timeoutSeconds: 1
